<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_tit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ejerc"
            android:gravity="center"
            android:id="@+id/hace_ejer"
            android:theme="@style/TextoInicio"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_below="@id/seg"
            >

            <Button
                android:id="@+id/si"
                android:layout_height="60dp"
                android:layout_width="70dp"
                android:adjustViewBounds="true"
                android:text="@string/txt_si"
                android:theme="@style/BotonPaciente"
                android:background="@android:color/white"
                />

            <Button
                android:id="@+id/no"
                android:layout_height="60dp"
                android:layout_width="70dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="30dp"
                android:text="@string/txt_no"
                android:theme="@style/BotonPaciente"
                android:background="@android:color/white"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_tipo"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:theme="@style/TextoInicio"
            android:id="@+id/tipo_ejer"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/caminar"
                android:layout_height="60dp"
                android:layout_width="100dp"
                android:adjustViewBounds="true"
                android:text="@string/txt_cami"
                android:theme="@style/BotonPaciente"
                android:background="@android:color/white"
                />

            <Button
                android:id="@+id/bicicleta"
                android:layout_height="60dp"
                android:layout_width="100dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="15dp"
                android:text="@string/txt_bici"
                android:theme="@style/BotonPaciente"
                android:background="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/gimnasio"
                android:layout_height="60dp"
                android:layout_width="100dp"
                android:adjustViewBounds="true"
                android:text="@string/txt_gimna"
                android:theme="@style/BotonPaciente"
                android:background="@android:color/white"
                />

            <Button
                android:id="@+id/otro"
                android:layout_height="60dp"
                android:layout_width="100dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="15dp"
                android:text="@string/txt_otro"
                android:theme="@style/BotonPaciente"
                android:background="@android:color/white"/>

        </LinearLayout>



    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sigui"
        android:padding="10dp"
        android:id="@+id/siguiente6"
        android:background="@color/fondo_tit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:theme="@style/BotonSiguiente"/>

</RelativeLayout>