<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_tit">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ahora"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:theme="@style/TextoPequeno"
        android:id="@+id/tit"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fin"
        android:layout_below="@id/tit"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/texto"
        android:theme="@style/TituloDialogo"
        />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_empezamos"
        android:padding="10dp"
        android:id="@+id/siguiente8"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/fondo_tit"
        android:theme="@style/BotonSiguiente"/>

</RelativeLayout>