<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_tit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_edad"
            android:theme="@style/TextoInicio"
            android:gravity="center"
            android:id="@+id/ledad"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_below="@id/seg"
            >

            <!--<Spinner
                android:id="@+id/dia"
                android:layout_height="80dp"
                android:layout_width="90dp"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:theme="@style/BotonNumeros"
                android:background="@android:color/white"
                />

            <Spinner
                android:id="@+id/mes"
                android:layout_height="80dp"
                android:layout_width="90dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:theme="@style/BotonNumeros"
                android:background="@android:color/white"/>

            <Spinner
                android:id="@+id/ano"
                android:layout_height="80dp"
                android:layout_width="90dp"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:theme="@style/BotonNumeros"
                android:background="@android:color/white"/>-->

            <EditText
                android:id="@+id/dia"
                android:layout_height="60dp"
                android:layout_width="70dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_dd"
                android:maxLines="1"
                android:maxLength="2"
                android:inputType="number"
                android:gravity="center"
                android:theme="@style/BotonPaciente"
                android:background="@android:color/white"
                />

            <EditText
                android:id="@+id/mes"
                android:layout_height="60dp"
                android:layout_width="70dp"
                android:inputType="number"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:maxLines="1"
                android:maxLength="2"
                android:hint="@string/txt_mm"
                android:theme="@style/BotonPaciente"
                android:background="@android:color/white"/>

            <EditText
                android:id="@+id/ano"
                android:layout_height="60dp"
                android:layout_width="70dp"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="4"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/txt_yy"
                android:theme="@style/BotonPaciente"
                android:background="@android:color/white"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_sexo"
            android:layout_marginTop="50dp"
            android:theme="@style/TextoInicio"
            android:id="@+id/lsexo"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_below="@id/seg"
            >

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/masculino"
                android:layout_height="60dp"
                android:layout_width="70dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:text="@string/txt_m"
                android:theme="@style/BotonNumeros"
                android:background="@android:color/white"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/femenino"
                android:layout_height="60dp"
                android:layout_width="70dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_f"
                android:theme="@style/BotonNumeros"
                android:background="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sigui"
        android:padding="10dp"
        android:id="@+id/siguiente3"
        android:background="@color/fondo_tit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:theme="@style/BotonSiguiente"/>

</RelativeLayout>