<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_tit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        >

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pac"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:id="@+id/paciente"
        android:theme="@style/BotonPaciente"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cuida"
        android:id="@+id/cuidador"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:theme="@style/BotonPaciente"/>

        </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sigui"
        android:padding="10dp"
        android:id="@+id/siguiente2"
        android:background="@color/fondo_tit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:theme="@style/BotonSiguiente"/>

</RelativeLayout>