<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="40dp">

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tit_toma_medicamento"
        android:gravity="center"
        android:paddingStart="45dp"
        android:paddingEnd="45dp"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@color/fondo_tit"
        android:theme="@style/TituloDialogo"
        android:id="@+id/titu"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/grabar_toma"
            android:layout_height="250dp"
            android:layout_width="250dp"
            android:adjustViewBounds="true"
            android:background="@drawable/chugar_03"
            android:layout_margin="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_recordar"
            android:layout_gravity="center_horizontal"
            android:background="@color/fondo_tit"
            android:id="@+id/record_en30"
            android:theme="@style/Boton"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ya_tomo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/fondo_tit"
            android:id="@+id/ya_tome"
            android:theme="@style/Boton"/>
    </LinearLayout>

</LinearLayout>