<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tit_actividad_fisica"
        android:id="@+id/tit_actividad"
        android:gravity="center"
        android:paddingStart="45dp"
        android:paddingEnd="45dp"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@color/fondo_tit"
        android:theme="@style/TituloDialogo"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/grabar_toma"
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:adjustViewBounds="true"
            android:background="@drawable/chugar_05"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ya_hice"
            android:layout_gravity="center_horizontal"
            android:background="@color/fondo_tit"
            android:id="@+id/ya_lo_hice"
            android:theme="@style/Boton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mas_tarde"
            android:text="@string/btn_tarde_hare"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="18dp"
            android:background="@color/fondo_tit"
            android:theme="@style/Boton"/>
    </LinearLayout>

</LinearLayout>